# process_designer

./: .gitattributes  .gitignore  .python-version  CHANGELOG-2026-07-16.md  CLAUDE.md  README.md  _smoke.py  app.py  app_config.py  build_standalone.py  check_env.py  dnd_component.py  excel_io.py  path_config.py  pii.py  pyproject.toml  run.bat  schema.py  setup_env.bat  state.py  store.py  ui_styles.py
.claude/: launch.json
.streamlit/: config.toml
frontend/: index.html
tests/fixtures/: solo_export_sample.json
views/: __init__.py  domain_view.py  excel_view.py  history_view.py  tree_view.py
