[project]
name = "process-designer"
version = "1.0.0"
description = "시운전팀 프로세스 설계 — lv0~lv6 업무 계층도 + AI 에이전트 적용 현황"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",       # 엑셀 다운로드/업로드
    "python-dotenv>=1.0.0",  # app_config(.env 로드) 필수
    # ★ parquet 을 생산하지 않지만 pyarrow 가 필요하다:
    #   streamlit/components/v1/custom_component.py 의 create_instance 가 pyarrow 를
    #   import 하므로, 없으면 DnD 커스텀 컴포넌트가 StreamlitAPIException 으로 죽는다.
    "pyarrow>=14.0.0",
]

[tool.uv]
managed = true
python-preference = "only-system"
python-downloads = "never"
# 사내망 공용PC 는 pypi 직접 접속이 막혀 있어, uv 캐시에 없는 휠은 받지 못해 설치가 죽는다.
# 이 프로젝트는 가장 늦게 만들어져 전 패키지가 "그 시점 최신"으로 resolve 됐고, 그 바람에
# pyarrow(~25MB)·numpy 등을 새로 받아야 하는 유일한 앱이 됐다.
# 기준은 data_manager — 전 앱의 parquet 생산자라 어느 PC에나 깔려 있어 캐시 적중 가능성이 가장 높다.
# 버전을 올릴 땐 data_manager 와 함께 올려야 캐시 공유가 유지된다.
constraint-dependencies = [
    "pyarrow==24.0.0",
    "numpy==2.4.6",
    "streamlit==1.58.0",
    "pillow==12.2.0",
    "rpds-py==2026.5.1",
    "narwhals==2.22.0",
    "click==8.4.1",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
    "gitpython==3.1.50",
    "pydeck==0.9.2",
    "websockets==16.0",
    "anyio==4.13.0",
    "charset-normalizer==3.4.7",
    "uvicorn==0.49.0",
    "altair==6.1.0",
    "certifi==2026.5.20",
    "protobuf==7.35.0",
    "python-multipart==0.0.30",
    "starlette==1.2.1",
]
